outputs/workspace_output_1773112938_2109.txt
  File "<stdin>", line 80
    pages_handled = re.findall(r"page\s*===\s*['"](\w+)['"]", nav_body)
                                                 ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
